--- a/index.html
+++ b/index.html
@@ -37,6 +37,13 @@
               <input type="number" min="0" max="0.99999" step="0.01" class="form-control" id="eccInput" placeholder="Orbit's eccentricity" value="0.0167">
             </div>
             <div class="form-group">
+              <label for="artInput" class="control-label">Animation rate</label>
+              <div class="input-group">
+                <input type="number" min="0.1" step="0.1" class="form-control" id="artInput" placeholder="Animation rate" value="0.2">
+                <div class="input-group-addon">yrs/s</div>
+              </div>
+            </div>
+            <div class="form-group">
               <span class="btn btn-default" id="setButton" role="button">Set parameters</span>
             </div>
           </form>
